# kinesis_viewer_cli

./: .gitignore  .pre-commit-config.yaml  .vimrc  CHANGELOG.md  Dockerfile  Makefile  README.md  const.py  docker-compose.yml  kdv.py  pyproject.toml  pytest.ini
.devcontainer/: devcontainer.json
.github/: dependabot.yml  mergify.yml
.github/workflows/: ci.yml
kdv/: hoge.py
src/: kinesis_client.py  kinesis_data_viewer.py  msg.py
test/: test_e2e_kdv.py  test_kdv.py  test_unit_kdv.py  util.py
