[tool.poetry]
name = "kinesis-viewer-cli"
version = "0.1.0"
description = ""
authors = ["kashio peiya <multistriata@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
typing-extensions = "^4.12.2"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"
black = "^24.10.0"
mypy = "^1.12.0"
pytest-cov = "^5.0.0"
pre-commit = "^4.0.1"
lxml = "^5.3.0"
python-semantic-release = "^9.11.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.semantic_release]
version = "0.1.0"
changelog = { mode = "update" }
