[tool.poetry]
name = "kinesis-viewer-cli"
version = "0.1.0"
description = ""
authors = ["kashio peiya <multistriata@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
typing-extensions = "^4.12.2"
boto3 = "^1.35.41"
boto3-stubs = "^1.35.41"
jsonargparse = "^4.33.2"
questionary = "^2.0.1"
rich = "^13.9.2"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"
black = "^24.10.0"
mypy = "^1.12.0"
pytest-cov = "^5.0.0"
pre-commit = "^4.0.1"
lxml = "^5.3.0"
python-semantic-release = "^9.11.1"
moto = "^5.0.18"
poethepoet = "^0.31.1"

[tool.poe.tasks]
test = "python -m pytest test/test_unit_kdv.py -s -vv --cov=src --cov-report term-missing --cov-report html"
test-no-cov = "python -m pytest test/test_unit_kdv.py -s -vv"
test-e2e = "python -m pytest --rootdir=. test/test_e2e_kdv.py -s -vv"
format-check = "black --check ."
format = "black ."
typecheck = "mypy . --no-incremental"
typecheck-report = "mypy . --html-report mypy_report"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.semantic_release]
branches = ["main"]

[tool.black]
line_length = 100

[tool.pytest.ini_options]
testpaths = ["test"]
